--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.5.2",
     "vant": "^1.4.3",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1"
   },
